--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "Rocketseat/NLW/elixir__heat_2021"]
 	path = Rocketseat/NLW/elixir__heat_2021
 	url = https://github.com/GustavoTxFreitas/nlw-heat-elixir.git
+[submodule "Rocketseat/NLW/react__impulse_2022"]
+	path = Rocketseat/NLW/react__impulse_2022
+	url = https://github.com/GustavoTxFreitas/nlw-impulse-react.git
